# asset-management-simulation-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: cloudrun-deploy-merge.yml  pytest-pull-request.yml  python-lint.yml
src/: app.py  asset_calc.py  utils.py
tests/: test_asset_calc.py
