[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Takayoshi Makabe <makabe.takayoshi1117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
gunicorn = "^20.1.0"
firebase-admin = "^6.1.0"
numpy = "^1.24.2"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
