[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Takayoshi Makabe", email = "makabe.takayoshi1117@gmail.com" }
]
readme = "README.md"
requires-python = "^3.10"

dependencies = [
    "Flask>=2.2.2,<3.0.0",
    "Flask-Cors>=3.0.10,<4.0.0",
    "gunicorn>=20.1.0,<21.0.0",
    "firebase-admin>=6.1.0,<7.0.0",
    "numpy>=1.24.2,<2.0.0",
    "pytest>=7.2.1,<8.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
mypy = "^0.991"
